# Azotea_verde_vi

./: .gitignore  Prog_azoteas_verdes -  FINAL clean.ipynb  Prog_azoteas_verdes - ORIGINAL.ipynb  README.md  config.toml.example  pyproject.toml
src/programa_azoteas/: angulos.py  data.py  indices.py  scenes.py  shapes.py
