[tool.poetry]
name = "programa-azoteas"
version = "0.1.0"
description = ""
authors = ["Mariana"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.2"
rasterio = "^1.4.1"
pandas = "^2.2.3"
seaborn = "^0.13.2"
ipykernel = "^6.29.5"
matplotlib = "^3.9.2"
geopandas = "^1.0.1"
xarray = "^2024.10.0"
netcdf4 = "^1.7.2"
rioxarray = "^0.17.0"
dask = "^2024.10.0"
earthengine-api = "^1.4.2"
geemap = "^0.35.1"
setuptools = "^75.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
